package co.edu.uniquindio.centroimpresion.view.principalmenu;

import javafx.scene.layout.BorderPane;

public class PanelAdd extends BorderPane {

}
