@startuml Diagrama Vista

skinparam Linetype ortho
skinparam style strictuml

class PanelPrincipal {
    -nombre: String

    +initComp() : void
    +movementPerformed(source: OpcionPrincipal)
}
class PanelPrincipalIzq {
    -nombre: String

    +initComp() : void
}
class Header {
    -nombre: String
    +initComp() : void
}
class TabPanelPrincipal{
    +initComp() : void
}

class PanelAcercaDe {

}
class PanelAdd {

}
class PanelRemove {

}
class PanelImprimir {

}
class PanelVer {

}

/'
Actua como medio de comunicacion para el panel de
la izquierda y el central
'/
interface TabComunicationListener <<interface>> {
    +<i>movementPerformed(source: OpcionPrincipal)
}
enum OpcionPrincipal <<enumeration>> {
    OpcionPrincipal(text: String)

    AGREGAR
    IMPRIMIR
    ELIMINAR
    VER
    ACERCA_DE
}
'Agregacion Opciones
PanelPrincipal --> " 1..5 " OpcionPrincipal : -opciones
PanelPrincipalIzq --> " 1..5 " OpcionPrincipal : -opciones
TabPanelPrincipal --> " 1..5 " OpcionPrincipal : -opciones

'Asociaciones
PanelPrincipal -->  PanelPrincipalIzq : 1
PanelPrincipal --> TabPanelPrincipal : 1
PanelPrincipalIzq --> Header : 1

'Asociaciones del panel de pestañas
TabPanelPrincipal --> PanelAcercaDe : 0..1
TabPanelPrincipal --> PanelAdd : 0..1
TabPanelPrincipal --> PanelRemove : 0..1
TabPanelPrincipal --> PanelImprimir : 0..1
TabPanelPrincipal --> PanelVer : 0..1

'Herencia de clases de javafx
TabPanelPrincipal --|> BorderPane
PanelPrincipal --|> BorderPane
PanelPrincipalIzq --|> VBox
Header --|> BorderPane

PanelAcercaDe --|> BorderPane
PanelVer --|> BorderPane
PanelAdd --|> BorderPane
PanelRemove --|> BorderPane
PanelImprimir --|> BorderPane


'Comunicacion entre paneles
PanelPrincipal ..|> TabComunicationListener
PanelPrincipalIzq ..> TabComunicationListener

@enduml